added Gallery section in the header

--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
         <a href="#skills">Skills</a>
         <a href="#experience">Experience</a>
 	<a href="#projects">Projects</a>
+	<li><a href="gallery.html">Gallery</a></li>
 	<a href="#certifications">Certifications</a>
         <a href="#contact">Contact</a>
     </nav>
