--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 
     <!-- Job 1 -->
     <div class="job">
-        <h3>Automation Electrical Engineer</h3>
+        <h3>Electrical Engineer</h3>
         <p><strong>ALS Logistic Solutions LLC, Dubai, UAE</strong> | Feb 2023 – Present</p>
         <p>Leading the installation, commissioning, and troubleshooting of electro-mechanical and automation systems for high-profile clients, ensuring optimal performance and reliability.</p>
     </div>
@@ -436,7 +436,7 @@
 
         <!-- Project 3: Car Turntable Maintenance -->
         <div class="project">
-            <h4>Car Turntable Installation and Maintenance</h4>
+            <h4> CTX-PR CAR TURNTABLES Installation and Maintenance</h4>
             <p>Led the Project Installation and Bi-Annual preventive maintenance for a private villa client in Riyadh, KSA.</p>
             <div class="project-photos">
                 <img src="car_turntable1.jpg" alt="Car Turntable Image 1">
@@ -450,9 +450,10 @@
     <div class="project-group">
         <h3>Projects in UAE</h3>
         
-        <!-- Project 4: Kardex Electrical Sorting System -->
+        <!-- Project 4: KARDEX VCM-->
         <div class="project">
-            <h4> Installation of Kardex Electrical Sorting System</h4>
+            <h4> Installation of KARDEX VERTICAL CAROUSEL MODULE</h4>
+	    <p>The new Kardex Megamat is an automated carousel which rotates vertically around a track to bring stored inventory to an operator.</p>
             <p>Successfully installed, commissioned and Handed over a high-capacity material sorting machine in Abu Dhabi.</p>
             <div class="project-photos">
                 <img src="kardex1.jpg" alt="Kardex System Image 1">
@@ -461,10 +462,41 @@
             </div>
         </div>
         
-        <!-- Project 5: Automated and Manual Car Parking Solutions -->
-        <div class="project">
-            <h4>Installation of Automated and Manual Car Parking Solutions</h4>
-            <p>Led the installation, commissioning, and troubleshooting of automated and manual car parking systems across UAE.</p>
+        <!-- Project 5: Car Lifter Installation & Commissioning – Dubai -->
+<div class="project">
+    <h4>Car Lifter Installation & Commissioning – Dubai</h4>
+    <p><strong>Hands-on experience in hydraulic lifts, stackers, AGP, and turntables with ALS team across villas, showrooms & business complexes.</strong></p>
+
+    <h5>🔹 Overview</h5>
+    <p>Worked as part of the <strong>ALS team</strong> to install, maintain, and commission various car lifting solutions across 
+        <strong>private villas, car showrooms, residential & commercial buildings in Dubai.</strong>
+    </p>
+
+    <h5>🔹 Systems Involved</h5>
+    <ul>
+        <li>✔ <strong>Hydraulic Car Lifts</strong> (Scissor, Two-Post, Four-Post)</li>
+        <li>✔ <strong>Car Stackers & Puzzle Parking Systems</strong></li>
+        <li>✔ <strong>Automated Guided Parking (AGP)</strong></li>
+        <li>✔ <strong>Car Turntables</strong> (For Showrooms & Space Optimization)</li>
+    </ul>
+
+    <h5>🔹 Brands & Companies</h5>
+    <p>Worked on <strong>Wohr, Australian Turntables, and other car lift manufacturers</strong> under ALS projects.</p>
+
+    <h5>🔹 Role & Contributions</h5>
+    <ul>
+        <li>✅ Assisted in <strong>installation & commissioning</strong> of various parking solutions</li>
+        <li>✅ Supported <strong>maintenance & troubleshooting</strong> for system efficiency</li>
+        <li>✅ Worked closely with <strong>clients & ALS team</strong> to ensure seamless operations</li>
+        <li>✅ Helped implement <strong>space-saving and automated parking solutions</strong></li>
+    </ul>
+
+    <h5>📌 Key Projects & Impact</h5>
+    <ul>
+        <li>🔹 Installed and optimized car parking systems for ALS clients</li>
+        <li>🔹 Assisted in <strong>troubleshooting & ensuring system reliability</strong></li>
+        <li>🔹 Worked on <strong>high-profile villas, commercial buildings & showrooms</strong></li>
+    </ul>
             <div class="project-photos">
                 <img src="car_parking1.jpg" alt="Car Parking Solution Image 1">
                 <img src="car_parking2.jpg" alt="Car Parking Solution Image 2">
@@ -472,10 +504,10 @@
             </div>
         </div>
 
-        <!-- Project 6: Conveyor Systems Installation -->
+        <!-- Project 6: MHS SYSTEM Installation-->
         <div class="project">
-            <h4>Installation of Storage Racks and Conveyor Systems</h4>
-            <p>Managed installation of Heavy Storage Racks and conveyor solutions for a major storage facility in Dubai.</p>
+            <h4>Installation of MHS SYSTEM - Dubai Medical Facility</h4>
+	    <p>Installed a G+4 pallet racking system with flow racks and an integrated conveyor system (motorized & gravity) to optimize storage, material flow, and handling efficiency.</p>
             <div class="project-photos">
                 <img src="conveyor1.jpg" alt="Conveyor Installation Image 1">
                 <img src="conveyor2.jpg" alt="Conveyor Installation Image 2">
