--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         <h5>📌 Key Achievements</h5>
         <ul>
             <li>🔹 Increased <strong>team efficiency by 20%</strong> through hiring and managing local technicians</li>
-            <li>🔹 Achieved a <strong>98% client satisfaction score</strong> through proactive issue resolution</li>
+            <li>🔹 Achieved a <strong>98% client satisfaction score</strong> hrough proactive issue resolution</li>
             <li>🔹 Standardized <strong>technical support across multiple DHL sites</strong>, ensuring consistent operational performance</li>
         </ul>
 
@@ -471,74 +471,68 @@
 </div>
 
     <!-- Projects in UAE -->
-    <div class="project-group">
-        <h3>Projects in UAE</h3>
-        
-        <!-- Project 4: KARDEX VCM-->
-        <div class="project">
-            <h4> Installation of KARDEX VERTICAL CAROUSEL MODULE</h4>
-	    <p>The new Kardex Megamat is an automated carousel which rotates vertically around a track to bring stored inventory to an operator.</p>
-            <p>Successfully installed, commissioned and Handed over a high-capacity material sorting machine in Abu Dhabi.</p>
-            <div class="project-photos">
-                <img src="kardex1.jpg" alt="Kardex System Image 1">
-                <img src="kardex2.jpg" alt="Kardex System Image 2">
-                <img src="kardex3.jpg" alt="Kardex System Image 3">
-            </div>
-        </div>
-        
-        <!-- Project 5: Car Lifter Installation & Commissioning – Dubai -->
-<div class="project">
-    <h4>Car Lifter Installation & Commissioning – Dubai</h4>
-    <p><strong>Hands-on experience in hydraulic lifts, stackers, AGP, and turntables with ALS team across villas, showrooms & business complexes.</strong></p>
+<div class="project-group">
+    <h3>Projects in UAE</h3>
 
-    <h5>🔹 Overview</h5>
-    <p>Worked as part of the <strong>ALS team</strong> to install, maintain, and commission various car lifting solutions across 
-        <strong>private villas, car showrooms, residential & commercial buildings in Dubai.</strong>
-    </p>
+    <!-- Engineering & Installation Operations – UAE -->
+    <div class="project">
+        <h4>🛠 Engineering & Installation Operations – UAE</h4>
+        <p><strong>Hands-on experience in automation, material handling, and parking solutions across key industries.</strong></p>
 
-    <h5>🔹 Systems Involved</h5>
-    <ul>
-        <li>✔ <strong>Hydraulic Car Lifts</strong> (Scissor, Two-Post, Four-Post)</li>
-        <li>✔ <strong>Car Stackers & Puzzle Parking Systems</strong></li>
-        <li>✔ <strong>Automated Guided Parking (AGP)</strong></li>
-        <li>✔ <strong>Car Turntables</strong> (For Showrooms & Space Optimization)</li>
-    </ul>
+        <h5>🔹 Overview</h5>
+        <p>Worked on <strong>high-profile engineering projects in Abu Dhabi & Dubai</strong>, involving automated storage, car parking systems, and conveyor solutions. 
+           Led **installation, commissioning, maintenance, and troubleshooting** to enhance efficiency and operational reliability.</p>
 
-    <h5>🔹 Brands & Companies</h5>
-    <p>Worked on <strong>Wohr, Australian Turntables, and other car lift manufacturers</strong> under ALS projects.</p>
+        <h5>🔹 Key Responsibilities</h5>
+        <ul>
+            <li>✅ Installed and commissioned <strong>advanced automated storage & material handling solutions</strong></li>
+            <li>✅ Led the setup of <strong>hydraulic lifts, car stackers, AGP & turntables</strong> across premium locations</li>
+            <li>✅ Supported **preventive maintenance & troubleshooting** for system efficiency</li>
+            <li>✅ Collaborated with **clients & ALS team** to ensure seamless project execution</li>
+        </ul>
 
-    <h5>🔹 Role & Contributions</h5>
-    <ul>
-        <li>✅ Assisted in <strong>installation & commissioning</strong> of various parking solutions</li>
-        <li>✅ Supported <strong>maintenance & troubleshooting</strong> for system efficiency</li>
-        <li>✅ Worked closely with <strong>clients & ALS team</strong> to ensure seamless operations</li>
-        <li>✅ Helped implement <strong>space-saving and automated parking solutions</strong></li>
-    </ul>
+        <h5>🔹 Systems & Projects in UAE</h5>
+        <ul>
+            <li>✔ <strong>Kardex Vertical Carousel Module</strong> – Installed and commissioned an automated high-capacity material sorting system in Abu Dhabi</li>
+            <li>✔ <strong>Car Lifting & Parking Solutions</strong> – Hydraulic lifts, AGP, and turntables for villas, showrooms, and business complexes in Dubai</li>
+            <li>✔ <strong>MHS System Installation</strong> – G+4 pallet racking with conveyor integration for a medical facility in Dubai</li>
+        </ul>
 
-    <h5>📌 Key Projects & Impact</h5>
-    <ul>
-        <li>🔹 Installed and optimized car parking systems for ALS clients</li>
-        <li>🔹 Assisted in <strong>troubleshooting & ensuring system reliability</strong></li>
-        <li>🔹 Worked on <strong>high-profile villas, commercial buildings & showrooms</strong></li>
-    </ul>
-            <div class="project-photos">
-                <img src="car_parking1.jpg" alt="Car Parking Solution Image 1">
-                <img src="car_parking2.jpg" alt="Car Parking Solution Image 2">
-                <img src="car_parking3.jpg" alt="Car Parking Solution Image 3">
-            </div>
+        <h5>📌 Key Achievements</h5>
+        <ul>
+            <li>🔹 Successfully delivered **multiple high-end automation projects** with **minimal downtime**</li>
+            <li>🔹 Enhanced **system efficiency** and **reduced maintenance issues** through proactive troubleshooting</li>
+            <li>🔹 Implemented **space-saving & automated storage solutions** to optimize workflow</li>
+        </ul>
+
+        <!-- Project Photos Section (Grouped at the End) -->
+        <h5>📸 Project Photos</h5>
+
+        <!-- Kardex System Photos -->
+        <h6>🔹 Kardex Vertical Carousel Module Installation – Abu Dhabi</h6>
+        <div class="project-photos">
+            <img src="kardex1.jpg" alt="Kardex System Image 1">
+            <img src="kardex2.jpg" alt="Kardex System Image 2">
+            <img src="kardex3.jpg" alt="Kardex System Image 3">
         </div>
 
-        <!-- Project 6: MHS SYSTEM Installation-->
-        <div class="project">
-            <h4>Installation of MHS SYSTEM - Dubai Medical Facility</h4>
-	    <p>Installed a G+4 pallet racking system with flow racks and an integrated conveyor system (motorized & gravity) to optimize storage, material flow, and handling efficiency.</p>
-            <div class="project-photos">
-                <img src="conveyor1.jpg" alt="Conveyor Installation Image 1">
-                <img src="conveyor2.jpg" alt="Conveyor Installation Image 2">
-                <img src="conveyor3.jpg" alt="Conveyor Installation Image 3">
-              </div>
-           </div>
+        <!-- Car Parking System Photos -->
+        <h6>🔹 Car Lifting & Parking Solutions – Dubai</h6>
+        <div class="project-photos">
+            <img src="car_parking1.jpg" alt="Car Parking Solution Image 1">
+            <img src="car_parking2.jpg" alt="Car Parking Solution Image 2">
+            <img src="car_parking3.jpg" alt="Car Parking Solution Image 3">
         </div>
+
+        <!-- MHS System Photos -->
+        <h6>🔹 MHS System Installation – Dubai Medical Facility</h6>
+        <div class="project-photos">
+            <img src="conveyor1.jpg" alt="Conveyor Installation Image 1">
+            <img src="conveyor2.jpg" alt="Conveyor Installation Image 2">
+            <img src="conveyor3.jpg" alt="Conveyor Installation Image 3">
+        </div>
+    </div>
+</div>
     </section>
     <!-- Certifications Section -->
     <section id="certifications" style="text-align: center;">
