--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     <!-- Header Section -->
     <header>
         <h1>Amir Hussain Shaik</h1>
-        <p>Electro-Mechanical Engineer | CPD Certified Lean Six Sigma Black Belt | Quality Controller QC | Automation Specialist</p>
+        <p>Electrical & Maintenance Engineer Specializing in - Electro-Mechanical & Automation Systems Installation & Commissioning | Troubleshooting | Maintenance | Administration | Lean Six Sigma Methodologies | Workplace Safety...</p>
     </header>
     <nav>
         <a href="#about">About Me</a>
@@ -323,28 +323,16 @@
     <div class="about-container">
         <!-- About Content -->
         <div class="about-content">
-            <h2>About Me</h2>
-            <p>
-                I am a dedicated <strong>Automation & Electrical Engineer</strong> with over 
-                <strong>9 years of experience</strong> delivering cutting-edge solutions across 
-                automation, electrical systems, and material handling projects. My expertise 
-                spans installations, diagnostics, and system optimization, ensuring streamlined 
-                performance and operational excellence.
-            </p>
-            <p>
-                Working with leading organizations in the UAE and Saudi Arabia, I have led projects 
-                ranging from <em>automated car parking solutions</em> and <em>car turntable installations</em> 
-                to <em>conveyor systems</em> and material sorting machines. I bring a results-driven 
-                approach to every project, leveraging <strong>Lean Six Sigma</strong> principles 
-                to enhance efficiency, reduce downtime, and meet stringent safety standards.
-            </p>
-            <p>
-                My passion lies in integrating innovative technologies with robust engineering 
-                practices to transform challenges into success stories. Whether it's leading 
-                cross-functional teams, troubleshooting complex systems, or training professionals, 
-                I take pride in delivering exceptional results that exceed client expectations.
-            </p>
-            <p><strong>Let's connect to create solutions that matter!</strong></p>
+            <h2><span>Innovating, Optimizing & Driving Engineering Excellence</span></h2>
+<p>Hello and welcome! I’m an <strong>Electrical & Maintenance Engineer</strong> with <strong>around 10 years of hands-on experience</strong> in designing, implementing, and optimizing engineering systems.</p>
+
+<p>My journey in the <strong>Electro-Mechanical & Automation Industry</strong> across India & the Middle East has allowed me to work on diverse, cutting-edge projects—ranging from <strong>Car Parking Systems and Turntables</strong> to <strong>Electric Monorails and Automated Conveyors</strong>. I specialize in transforming challenges into streamlined, efficient solutions that enhance operational performance.</p>
+
+<p>With a <strong>Lean Six Sigma Black Belt</strong>, I bring a structured and data-driven approach to engineering, focusing on improving <strong>safety, efficiency, and system reliability</strong>. Beyond technical expertise, I enjoy collaborating with teams, sharing knowledge, and mentoring professionals to create future-ready talent in the industry.</p>
+
+<p>I’m always open to exploring <strong>new opportunities</strong> where I can contribute my skills and experience to meaningful projects. Whether it’s leading complex engineering initiatives, optimizing existing systems, or driving innovation, I’m excited about making a lasting impact.</p>
+
+<p><span>If you’re looking for someone who can adapt, innovate, and deliver results, let’s connect and explore how we can work together.</span></p>
         </div>
         <!-- About Image -->
         <div class="about-image">
