--- a/index.html
+++ b/index.html
@@ -83,57 +83,104 @@
             margin-bottom: 2rem;
             font-size: 2.2rem;
         }
-	/* About Section Styling */
-        .about-section {
-            background-color: #e3f2fd;
-            padding: 3rem 2rem;
-        }
+	
 
-        .about-container {
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            justify-content: space-between;
-            max-width: 1200px;
-            margin: 0 auto;
-            gap: 2rem;
-        }
+        /* About Section Styling */
+section {
+    padding: 4rem 2rem;
+    background-color: #f5f5f5;
+    width: 100%;
+    box-sizing: border-box;
+}
 
-        .about-content {
-            flex: 1 1 50%;
-            max-width: 600px;
-            text-align: justify;
-        }
+section h2 {
+    color: #6200ea;
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
 
-        .about-content h2 {
-            color: #3949ab;
-            font-size: 2.4rem;
-        }
+/* About Container */
+.about-container {
+    display: flex;
+    gap: 2rem;
+    align-items: center; /* Aligns text and image in desktop view */
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 
-        .about-content p {
-            line-height: 1.8;
-            font-size: 1.2rem;
-            color: #444;
-        }
+/* About Content */
+.about-content {
+    flex: 2;
+    min-width: 300px;
+    background: #fff;
+    border: 2px solid #6200ea;
+    border-radius: 10px;
+    padding: 2rem;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Ensures text is vertically aligned */
+    height: auto;
+}
 
-        .about-image {
-            flex: 1 1 40%;
-            max-width: 400px;
-        }
+.about-content h2 {
+    font-size: 2.2rem;
+    margin-bottom: 1rem;
+}
 
-        .about-image img {
-            width: 100%;
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s;
-        }
+.about-content p {
+    font-size: 1.1rem;
+    margin-bottom: 1rem;
+    text-align: justify;
+    line-height: 1.8;
+}
 
-        .about-image img:hover {
-            transform: scale(1.1);
-        }
+.about-content p span {
+    font-weight: bold;
+    color: #6200ea;
+}
 
-        /* Skills Section Styling */
+/* About Image */
+.about-image {
+    flex: 1;
+    min-width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-image img {
+    width: 100%;
+    max-width: 350px;
+    border-radius: 15px;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s, box-shadow 0.3s;
+    object-fit: cover; /* Ensures the image fills the space properly */
+    height: 100%; /* Adjusts the height dynamically */
+}
+
+.about-image img:hover {
+    transform: scale(1.05);
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3);
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+    .about-container {
+        flex-direction: column;
+    }
+
+    .about-content, .about-image {
+        width: 100%;
+    }
+
+    .about-image img {
+        max-width: 100%;
+        height: auto;
+    }
+}
+	/* Skills Section Styling */
         #skills {
             padding: 3rem 1.5rem;
             background-color: #f1f8e9;
